footer, aboutus styling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,5 +6,7 @@
 @import "settings/_mixins";
 @import "settings/_index";
 
-@import "elements/_footer";
+@import "elements/_homefooter";
 @import "elements/_header";
+@import "elements/_homethreecolumns";
+@import "elements/_homeaboutus";
