--- a/src/scss/settings/_fonts.scss
+++ b/src/scss/settings/_fonts.scss
@@ -1,2 +1,2 @@
-$font-merriweather: 'Merriweather', serif;
-$font-open-sans: "Open Sans", sans-serif;
+$merriweather: 'Merriweather', serif;
+$opensans: "Open Sans", sans-serif;
