--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,4 @@
 @import "elements/_header";
 @import "elements/_homethreecolumns";
 @import "elements/_homeaboutus";
+@import "elements/_homesteps";
