--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,4 @@
 @import "elements/_homethreecolumns";
 @import "elements/_homeaboutus";
 @import "elements/_homesteps";
+@import "elements/_homecontact";
