small changes,background image, 3columns text

--- a/src/scss/elements/_homeaboutus.scss
+++ b/src/scss/elements/_homeaboutus.scss
@@ -26,7 +26,8 @@
       }
     }
     .rightSideAboutUs {
-        width: 958px;
+      background-image: url("../../assets/People.jpg");
+      width: 958px;
       height: 935px;
       background-size: cover;
     }
