--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,8 +7,9 @@
 @import "settings/_index";
 
 @import "elements/_homefooter";
-@import "elements/_header";
 @import "elements/_homethreecolumns";
 @import "elements/_homeaboutus";
 @import "elements/_homesteps";
 @import "elements/_homecontact";
+@import "elements/_hometitle";
+@import "elements/_homeheader";
