--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,3 +13,4 @@
 @import "elements/_homecontact";
 @import "elements/_hometitle";
 @import "elements/_homeheader";
+@import "elements/_homeorganizations";
