--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,5 @@
 @import "elements/_hometitle";
 @import "elements/_homeheader";
 @import "elements/_homeorganizations";
+@import "elements/_homelogin";
+@import "elements/_homeregister";
