logout layout, remeber the user(authIsReady)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,3 +16,4 @@
 @import "elements/_homeorganizations";
 @import "elements/_homelogin";
 @import "elements/_homeregister";
+@import "elements/_logout";
