--- a/src/scss/elements/_logout.scss
+++ b/src/scss/elements/_logout.scss
@@ -4,8 +4,10 @@
   .logout_container {
     text-align: center;
     h1 {
+      line-height: 3rem;
       font-size: 1.8rem;
       margin: 12rem 0 2rem 0;
+      
     }
     img {
       margin-bottom: 3rem;
