--- a/src/scss/elements/_stepstodo.scss
+++ b/src/scss/elements/_stepstodo.scss
@@ -126,10 +126,10 @@
       justify-content: space-between;
       width: 58.5rem;
       
-      .firstColumn {
+      // .firstColumn {
       
         
-      }
+      // }
       .columnAd {
         text-align: right;
         
@@ -210,9 +210,6 @@
     p{
       margin-right: 1rem;
       outline: 0;
-    }
-    h2 {
-
     }
   }
 }
