--- a/src/scss/elements/_stepstodo.scss
+++ b/src/scss/elements/_stepstodo.scss
@@ -2,8 +2,8 @@
   background-image: url("../../assets/Background-Form.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position-y: 6rem;
-  // height: 55.2rem;
+  // background-position-y: 6rem;
+  //height: 55.2rem;
   width: 118.7rem;
 
   .importantInformation {
@@ -45,6 +45,7 @@
       input[type=radio] {
         padding: 0.5em;
         -webkit-appearance: none;
+        appearance: none;
         outline: 0.1rem solid black;
         outline-offset: 0.1rem;
         
@@ -125,18 +126,15 @@
       display: flex;
       justify-content: space-between;
       width: 58.5rem;
-      
-      // .firstColumn {
-      
-        
-      // }
-      .columnAd {
-        text-align: right;
+          
+    .column {
+     display: grid;
+      justify-content: flex-start;
+      grid-template-columns: auto minmax(auto, 16rem);
+      gap: 1rem 0.5rem;
+      }
         
         label {
-          margin-right: 1rem;
-          outline: 0;
-          text-align: right;
           font-size: 1.5rem;
         }
         p {
@@ -160,8 +158,6 @@
           background-color: #EFEDE9;
           height: 2.5rem;
         }
-        
-      }
   
     }
     .lastInfo {
@@ -170,7 +166,7 @@
       h1 {
         font-size: 2.2rem;
         font-weight: bold;
-        padding: 3rem 0 3rem 5rem;
+        padding: 3rem 0 3rem 0rem;
       }
       p {
         padding: 1rem 0 2rem 5rem;
@@ -180,36 +176,40 @@
 .summaryInformation {
   margin-left: 8.9rem;
   h2 {
-    margin: 0.5rem 1rem 2rem 3rem;
+    margin: 0.5rem 1rem 2rem 0rem;
     text-align: left;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: bold;
   }
   p{
-    margin: 0 0 2rem 6rem;
+    margin: 0 0 2rem 0rem;
+    font-size: 1.2rem;
   }
   img {
     width: 2rem;
     position: relative;
     top: 5rem;
-    left: 3rem;
+    left: - 3rem;
   }
   .iconTwo {
     width: 2rem;
     position: relative;
     top: 1.5rem;
-    left: 3rem;
+    left: -3rem;
   }
   .firstColumn {
-    margin-right: 2rem;
+    //margin-right: 0rem;
   }
   .allColumnSummary{
     display: flex;
+    justify-content: space-between;
+      width: 30rem;
   }
   .columnAd {
-    p{
-      margin-right: 1rem;
-      outline: 0;
+    
+    p {
+     // margin-right: 0rem;
+      //outline: 0;
     }
   }
 }
@@ -257,4 +257,10 @@ label {
   color: $black;
 }
 }
+// .success {
+//   h1{
+//     font-size:5rem;
+//   }
+  // }
 }
+
