stepsToDo styling buttons

--- a/src/scss/elements/_stepstodo.scss
+++ b/src/scss/elements/_stepstodo.scss
@@ -2,8 +2,9 @@
   background-image: url("../../assets/Background-Form.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  // background-position-y: 6rem;
-  //height: 55.2rem;
+  background-position-y: 5rem;
+  background-position-x:-14rem;
+  height: 66.3rem;
   width: 118.7rem;
 
   .importantInformation {
@@ -21,7 +22,7 @@
     }
   }
   .step {
-    padding: 1rem 0 2rem 8.8rem;
+    padding: 1rem 0 8rem 8.8rem;
    
     p {
       margin: 1rem 0 4.3rem 0;
@@ -61,7 +62,16 @@
   }
   
   }
+ .buttonsBackNext {
+  display: flex;
+  width:300px;
+  align-items: flex-end;
+  justify-content:space-evenly;
+  margin-left: 8.8rem;
+ }
   button {
+    align-self: flex-end;
+    
     padding: 1rem 2rem;
     text-decoration: none;
     color: black;
@@ -69,15 +79,12 @@
     border: 1px solid black;
     font-weight: lighter;
     cursor: pointer;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
     background-color: #EFEDE9;
-    outline: 0;  
-    margin-left: 8.8rem;
+
     }
     .secondStep {
       font-size:1.5rem;
-      margin-bottom: 10rem;
+      margin-bottom: 15rem;
       label {
         padding-right: 1rem;
       }
@@ -99,10 +106,6 @@
          padding: 0.5rem 1rem;
          background-color: #EFEDE9;
        }
-      //  label {
-      //   border: 1px solid;
-      //   padding: 0.5rem 1rem;
-      // }
        textarea {
         background-color: #EFEDE9;
         resize: none;
@@ -161,7 +164,9 @@
   
     }
     .lastInfo {
-      margin-left: 8.9rem;
+      padding-left: 8.9rem;
+      background-color: #EBEAE8;
+
      
       h1 {
         font-size: 2.2rem;
@@ -174,7 +179,7 @@
     }
 
 .summaryInformation {
-  margin-left: 8.9rem;
+  margin-left: 1rem;
   h2 {
     margin: 0.5rem 1rem 2rem 0rem;
     text-align: left;
@@ -197,24 +202,31 @@
     top: 1.5rem;
     left: -3rem;
   }
-  .firstColumn {
-    //margin-right: 0rem;
-  }
+
   .allColumnSummary{
     display: flex;
     justify-content: space-between;
       width: 30rem;
   }
-  .columnAd {
-    
-    p {
-     // margin-right: 0rem;
-      //outline: 0;
+}
+.success_container {
+    padding-top: 25rem;
+    font-weight: lighter;
+    margin-left: 18.7rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 37.5rem;
+    h1 {
+      font-size:2.5rem;
+      text-align: center;
+      line-height: 3.7rem;
+      padding-bottom: 3rem;
     }
-  }
 }
-  
-}
+  } 
+
 .thirdStep {
   .checkbox_list {
     display: flex;
@@ -257,10 +269,6 @@ label {
   color: $black;
 }
 }
-// .success {
-//   h1{
-//     font-size:5rem;
-//   }
-  // }
 }
+
 
