--- a/src/scss/elements/_homeheader.scss
+++ b/src/scss/elements/_homeheader.scss
@@ -6,7 +6,7 @@
     text-align: right;
     margin-top: 1rem;
     font-size: 14px;
-    color: $grey;
+    color: $black;
     a {
       margin-right: 1.5rem;
       text-decoration: none;
@@ -52,7 +52,7 @@
       margin-right: 1.5rem;
       text-decoration: none;
       font-weight: lighter;
-      color: #3C3C3C;
+      color: $black;
       padding: 0.3rem 0.5rem;
       &:hover {
         border: 1px solid $black;
