--- a/src/scss/elements/_homesteps.scss
+++ b/src/scss/elements/_homesteps.scss
@@ -1,16 +1,16 @@
 .homeSteps_container {
-    margin-bottom: 80px;
-    margin-top: 55px;
-    height: 624px;
+    margin-bottom: 5rem;
+    margin-top: 3.4rem;
+    height: 39rem;
     
     .homeStep {
         text-align: center;
         h1 {
-        font-size: 38px;
-        margin-bottom: 31px; 
+        font-size: 2.4rem;
+        margin-bottom: 1.9rem; 
     }
     img {
-        margin-bottom: 35px;
+        margin-bottom: 2.2rem;
     }
 }
    
@@ -18,14 +18,14 @@
     display: flex;
     justify-content: space-evenly;
     text-align: center;
-    height: 325px;
+    height: 20.3rem;
     background-color: $white;
     color: $black;
 
     h1 {
-        font-size: 18px;
-        margin-bottom: 10px;
-        margin-top:10px;
+        font-size: 1.1rem;
+        margin-bottom: 0.6rem;
+        margin-top: 0.6rem;
     }
     
 
