--- a/src/scss/elements/_stepstodo.scss
+++ b/src/scss/elements/_stepstodo.scss
@@ -129,16 +129,17 @@
 
     .pickupAddress {
       display: flex;
-      justify-content: space-between;
-      width: 58.5rem;
+      // justify-content: space-between;
+      // width: 58.5rem;
 
-      .column {
-      display: grid;
-      justify-content: flex-start;
+      .firstColumn {
+      // display: grid;
+      // justify-content: flex-start;
       // grid-template-columns: auto minmax(auto, 16rem);
-      gap: 1rem 0.5rem;
+      // gap: 1rem 0.5rem;
       }
-        
+        .columnAd { 
+          text-align: right;
         label {
           font-size: 1.5rem;
         }
@@ -163,6 +164,7 @@
           background-color: #EFEDE9;
           height: 2.5rem;
         }
+      }
     }
   }
 
