--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,3 +19,11 @@
 @import "elements/_logout";
 @import "elements/_giveaway";
 @import "elements/_stepstodo";
+@import "elements/_step1";
+@import "elements/_step2";
+@import "elements/_step3";
+@import "elements/_step4";
+@import "elements/_lastStep";
+@import "elements/_success";
+
+
