--- a/src/scss/elements/_homefooter.scss
+++ b/src/scss/elements/_homefooter.scss
@@ -1,5 +1,5 @@
 .footer_container {
-    height:24px;
+    height: 1.5rem;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -8,21 +8,19 @@
     span {
      text-align: center;
      justify-content: flex-end;
-     margin-left: 886px;
+     margin-left: 55.4rem;
     }
     .socialmedia {
       display: flex;
     
 
       .facebook {
-        margin-left: 587px;
-        margin-right:30px;
+        margin-left: 36.7rem;
+        margin-right:1.9rem;
       }
       .instagram {
-        margin-right:142px;
-        margin-right: 30px;
+        margin-right:8.9rem;
+        margin-right: 1.9rem;
       }
     }
-    
-
 }
