--- a/src/scss/elements/_homecontact.scss
+++ b/src/scss/elements/_homecontact.scss
@@ -11,18 +11,18 @@
     .contact_name {
       display: flex;
       justify-content: space-between;
-      margin-top: 20px;
+      margin-top: 1.2rem;
     }
     .rightSideForm {
       width: 35%;
       text-align: center;
       h1 {
-        font-size: 38px;
-        margin: 200px 0 38px 0;
+        font-size: 2.4rem;
+        margin: 12.5rem 0 2.4rem 0;
       }
       img {
-        width: 253px;
-        height: 33px;
+        width: 15.8rem;
+        height: 2.1rem;
         margin-bottom: 2rem;
         align-items: center;
       }
@@ -31,13 +31,13 @@
       text-align: left;
       margin-left: 6rem;
       label {
-        font-size: 16px;
+        font-size: 1rem;
         display: inline-grid;
         margin: 0 1rem 1rem 0;
       }
       input {
         border: none;
-        border-bottom: 1px solid $black;
+        border-bottom: 0.06rem solid $black;
         margin-top: 1rem;
         outline: 0;
       }
@@ -49,22 +49,22 @@
         margin-top: 1rem;
         outline: 0;
         resize: none;
-        font-size: 16px;
-        width: 528px;
-        height: 97px;
+        font-size: 1rem;
+        width: 33rem;
+        height: 6.1rem;
       }
       .buttonSubmit {
         display: flex;
         justify-content: flex-end;
         .buttonFormSubmit {
-          font-size: 18px;
-          padding: 13px 52px;
+          font-size: 1.1rem;
+          padding: 0.8rem 3.2rem;
           background-color: white;
           border: 1px solid $black;
           color: $black;
           cursor: pointer;
-          margin-top: 50px;
-          margin-right: 37px;
+          margin-top: 3.1rem;
+          margin-right: 2.3rem;
       }     
     }
     }
