--- a/src/scss/elements/_homethreecolumns.scss
+++ b/src/scss/elements/_homethreecolumns.scss
@@ -20,8 +20,8 @@
         
       }
       h2 {
-        font-size: 18px;
-        margin-bottom: 28px;
+        font-size: 1.1rem;
+        margin-bottom: 1.8rem;
       }
       p {
         font-size: 1rem;
